[package]
name = "deeblu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docker-api = "0.11.0"
rocket = "0.5.0-rc.2"
git2 = "0.15"
log = "0.4.17"
env_logger = "0.9.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.release]
strip = true
